# situator-incident-pipeline

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
docs/: DATA_FORMAT.md  design.md  итоговый-отчёт-конфигурация-и-производительность.md  руководство-по-внедрению.md
docs/adr/: README.md
pipeline/: .dockerignore  Dockerfile  README.md  pyproject.toml
pipeline/config/: cameras.example.yaml  lexicon.yaml  pipeline.yaml
pipeline/situator/: cards.py  cli.py  crosscam.py  degradation.py  detector.py  frames.py  ingest.py  metrics.py  replay.py  sessions.py  staticmap.py  xlsx.py
