[project]
name = "situator"
version = "0.1.0"
description = "Конвейер объединения сработок видеонаблюдения в инциденты (Ситуатор 2.0)"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3,<9",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
situator = "situator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["situator*"]
